--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.11.0"
+agp = "8.10.1"
 android-compileSdk = "36"
 android-minSdk = "24"
 android-targetSdk = "36"
@@ -8,28 +8,28 @@ androidx-appcompat = "1.7.1"
 androidx-constraintlayout = "2.2.1"
 androidx-core = "1.16.0"
 androidx-espresso = "3.6.1"
-androidx-lifecycle = "2.9.1"
+androidx-lifecycle = "2.9.4"
 androidx-testExt = "1.2.1"
-androidx-activityCompose = "1.10.1"
-androidx-core-ktx = "1.16.0"
-androidx-espresso-core = "3.6.1"
-androidx-material = "1.12.0"
-androidx-test-junit = "1.2.1"
-composeHotReload = "1.0.0-beta03"
-composeMultiplatform = "1.8.2"
+androidx-activityCompose = "1.11.0"
+androidx-core-ktx = "1.17.0"
+androidx-espresso-core = "3.7.0"
+androidx-material = "1.13.0"
+androidx-test-junit = "1.3.0"
+composeHotReload = "1.0.0-beta07"
+composeMultiplatform = "1.9.0"
 compose-plugin = "1.7.0"
 navigationCompose = "2.8.0-alpha13"
 kotlinSerialization = "1.9.0"
 junit = "4.13.2"
-kotlin = "2.2.0"
+kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
-ktor = "3.2.1"
+ktor = "3.3.0"
 logback = "1.5.18"
 koin = "4.1.0"
 coil3 = "3.2.0"
 ksp = "2.0.20-1.0.24"
-sqlite = "2.5.2"
-room = "2.7.2"
+sqlite = "2.6.1"
+room = "2.8.3"
 datastore = "1.1.7"
 
 
@@ -96,6 +96,7 @@ kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref =
 jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 room = { id = "androidx.room", version.ref = "room" }
+kotlinCocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 
 [bundles]
 ktor = [
