--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,25 +8,25 @@ androidx-appcompat = "1.7.1"
 androidx-constraintlayout = "2.2.1"
 androidx-core = "1.16.0"
 androidx-espresso = "3.6.1"
-androidx-lifecycle = "2.9.4"
+androidx-lifecycle = "2.9.5"
 androidx-testExt = "1.2.1"
 androidx-activityCompose = "1.11.0"
 androidx-core-ktx = "1.17.0"
 androidx-espresso-core = "3.7.0"
 androidx-material = "1.13.0"
 androidx-test-junit = "1.3.0"
-composeHotReload = "1.0.0-beta07"
-composeMultiplatform = "1.9.0"
+composeHotReload = "1.0.0-rc02"
+composeMultiplatform = "1.9.1"
 compose-plugin = "1.7.0"
-navigationCompose = "2.8.0-alpha13"
+navigationCompose = "2.9.1"
 kotlinSerialization = "1.9.0"
 junit = "4.13.2"
-kotlin = "2.2.20"
+kotlin = "2.2.21"
 kotlinx-coroutines = "1.10.2"
-ktor = "3.3.0"
-logback = "1.5.18"
-koin = "4.1.0"
-coil3 = "3.2.0"
+ktor = "3.3.1"
+logback = "1.5.20"
+koin = "4.1.1"
+coil3 = "3.3.0"
 ksp = "2.0.20-1.0.24"
 sqlite = "2.6.1"
 room = "2.8.3"
